# finn-examples

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AMD-license-agreement-for-non-commercial-models.md  AUTHORS.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml  run-docker.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-fix.md  feature_request.md
.github/workflows/: python-publish.yml
ci/: Jenkinsfile  download-test-files.py  insert_verif.sh  verification_funcs.py
ci/verification_io/: MLP_W3A3_python_speech_features_pre-processing_QONNX_input.npy  cnv_1w1a_gtsrb_output.npy  cnv_cifar10_input.npy  mobilenetv1-w4a4_output.npy  tfc_mnist_input.npy  unsw_nb15-mlp-w2a2_output.npy
finn/examples/: driver.py  models.py
finn_examples/: __init__.py  driver.py  models.py
finn_examples/bitfiles/: bitfiles.zip.link  tfc-w1a1.bit.link  tfc-w1a1.hwh.link
finn_examples/data/: all_validation_kws_data_preprocessed.zip.link  all_validation_kws_data_preprocessed_py_speech.zip.link  audio_samples.zip.link  kws_dataflow_parent.link
finn_examples/finn/util/: data_packing.py
finn_examples/notebooks/: 0_mnist_with_fc_networks.ipynb  1_cifar10_with_cnv_networks.ipynb  2_imagenet_with_cnns.ipynb  2_imagenet_with_mobilenet_v1.ipynb  3_binarycop_mask_detection.ipynb  3_radioml_with_cnns.ipynb  4_keyword_spotting.ipynb  5_radioml_with_cnns.ipynb  6_cybersecurity_with_mlp.ipynb  6_traffic_sign_recognition_gtsrb.ipynb  7_super_res_with_espcn.ipynb  7_traffic_sign_recognition_gtsrb.ipynb
tests/: download-test-files.py  test_jupyter_notebooks.py
(+5 files in other folders)
