[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel", "pynq==3.0.1", "ipython"]

[tool.setuptools_scm]
write_to = "finn_examples/_version.py"

[tool.pytest.ini_options]
markers = [
    "pynq_notebooks",
    "zcu_notebooks",
    "ultra96_notebooks",
    "alveo_notebooks",
]
